# MLX-TurboQuant-Service

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  format-restraint.fixture.json  heavy-context-retrieval.fixture.json  heavy-context-retrieval.prompt.txt  long-context-retrieval.fixture.json  long-context-retrieval.prompt.txt  tiny-factual.fixture.json
config/: default.json  diffusiongemma-4020.example.json  local.example.json
docs/: generative-backend-contract-phase1.md  qwen3-tts-dev-user-test.md  qwen3-tts-phase1-checkpoint.md  qwen3-tts-testing-readiness.md
runtime-patches/: mlx-vlm-0.6.3-gemma4-elastic-kv.patch
scripts/: compare-lanes  launchd-supervisor.sh  launchd-utils  list-fixtures  memory-profile  qwen3-tts-dev-test  reclaim-profile  recovery-test  restart  run-fixture  smoke-e2b-runtime-parity.py  smoke-ready-state.sh  smoke-test  soak-profile  start  state  stop  timeout-failure-test  verify-mlx-vlm-turboquant-patch.sh
src/shared/: __init__.py  backend_adapters.py  config.py  governor.py  parts.py
src/supervisor/: __init__.py  main.py  session_store.py  worker_manager.py
src/worker/: __init__.py  backends.py  config.py  main.py
tests/: test_backend_adapters.py  test_config.py  test_governor.py  test_message_parts.py  test_si_drone_sessions.py  test_worker_queue.py
